# seqit

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/commands/: fq2fa.rs  grep.rs  head.rs  locate.rs  mod.rs  rename.rs  rmdup.rs  sample.rs  seq.rs  shuffle.rs  sort.rs  spike.rs  stats.rs  tail.rs
src/formats/: mod.rs
src/io/: aligned.rs  fastx.rs  mod.rs
src/pairs/: mod.rs
src/utils/: mod.rs
tests/: cli.rs
tests/data/: a.fa  a.fq  b.fq
