[package]
name = "seqit"
version = "0.1.0"
edition = "2021"
description = "Streaming-first Rust toolkit for biological sequence file operations"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
xz2 = "0.1"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ahash = "0.8"
bytecount = "0.6"
bio = "3"
num-format = "0.4"
rust-htslib = { version = "0.51", default-features = false }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
